--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 'android-N'
+    buildToolsVersion '25.0.2'
     defaultConfig {
         applicationId "com.ashwin.sadhanasms"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 'N'
         versionCode 4
         versionName '1.3'
     }
